add standing report header to support actions

--- a/app/views/dashboards/standings.html
+++ b/app/views/dashboards/standings.html
@@ -1,11 +1,11 @@
 <!-- start dashboard header -->
-<!-- <div class="app-header bg b-b">
-    <div class="navbar">
-        <div class="navbar-item pull-left h5">
-            Standing - Reports
-        </div>
+<div class="app-header bg b-b" style="background-color: white;">
+  <div class="navbar">
+    <div class="navbar-item pull-left h5 text-md">
+      Standing - Reports
     </div>
-</div> -->
+  </div>
+</div>
 <!-- end dashboard header -->
 <!-- start overview body -->
 <div class="app-body">
