--- a/app/views/dashboards/standings.html
+++ b/app/views/dashboards/standings.html
@@ -1,9 +1,20 @@
 <!-- start dashboard header -->
 <div class="app-header bg b-b" style="background-color: white;">
   <div class="navbar">
+    <!-- start report title -->
     <div class="navbar-item pull-left h5 text-md">
       Standing - Reports
     </div>
+    <!-- end report title -->
+    <!-- start report actions -->
+    <ul class="nav navbar-nav pull-right">
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="dropdown" aria-expanded="false" title="Click to Filter Report">
+          <i class="ion-android-funnel w-24" title="Click To Filter Reports"></i>
+        </a>
+      </li>
+    </ul>
+    <!-- end report actions -->
   </div>
 </div>
 <!-- end dashboard header -->
