--- a/app/views/roles/_partials/list.html
+++ b/app/views/roles/_partials/list.html
@@ -44,7 +44,7 @@
     <!-- end role listing -->
     <!-- start pagination -->
     <div class="p-x-md p-y">
-        <div class="btn-group pull-right" list-pager" uib-pager ng-show="willPaginate()" total-items="total" ng-model="page" items-per-page="limit" ng-change="find()" template-url="views/_partials/list_pager.html">
+        <div class="btn-group pull-right list-pager" uib-pager ng-show="willPaginate()" total-items="total" ng-model="page" items-per-page="limit" ng-change="find()" template-url="views/_partials/list_pager.html">
         </div>
         <span class="text-sm text-muted">Total: {{total}}</span>
     </div>
