--- a/app/views/servicerequests/_partials/list.html
+++ b/app/views/servicerequests/_partials/list.html
@@ -19,35 +19,33 @@
         <div class="row-body scrollable hover">
             <div class="row-inner" id="scrollable-servicerequest-list">
                 <div class="list" data-ui-list="info">
-                    <div infinite-scroll='paginate()' infinite-scroll-disabled='paginating' infinite-scroll-distance='1' infinite-scroll-container='"#scrollable-servicerequest-list"'>
-                        <div ng-click="select(servicerequest)" class="list-item list-item-padded" ng-repeat="servicerequest in servicerequests" title="{{servicerequest.description}}" style="border-left: 2px solid {{servicerequest.priority.color || '#f3c111'}}">
-                            <div class="list-left">
-                                <span class="w-40 avatar circle">
-                                    <letter-avatar title="Status & Area" 
-                                    data="{{servicerequest.jurisdiction.name}}" 
-                                        height="60" width="60" shape="round"
-                                        color="{{servicerequest.status.color}}">
-                                    </letter-avatar>
-                                </span>
+                    <div ng-click="select(servicerequest)" class="list-item list-item-padded" ng-repeat="servicerequest in servicerequests" title="{{servicerequest.description}}" style="border-left: 2px solid {{servicerequest.priority.color || '#f3c111'}}">
+                        <div class="list-left">
+                            <span class="w-40 avatar circle">
+                                <letter-avatar title="Status & Area" 
+                                data="{{servicerequest.jurisdiction.name}}" 
+                                    height="60" width="60" shape="round"
+                                    color="{{servicerequest.status.color}}">
+                                </letter-avatar>
+                            </span>
+                        </div>
+                        <div class="list-body">
+                            <span title="Issue Report Date" class="pull-right text-xs text-muted">
+                                {{servicerequest.createdAt  | date:'dd MMM yyyy HH:mm'}}
+                            </span>
+                            <div class="item-title">
+                                <a href="#" class="_500">{{servicerequest.service.name}} 
+                                <br/><span title="Issue Number" class="font-size-12">
+                                #{{servicerequest.code}}</span></a>
                             </div>
-                            <div class="list-body">
-                                <span title="Issue Report Date" class="pull-right text-xs text-muted">
-                                    {{servicerequest.createdAt  | date:'dd MMM yyyy HH:mm'}}
+                            <small class="block text-xs text-muted text-ellipsis">
+                                <span title="Reporter Name">
+                                <i class="icon-user"></i>&nbsp;&nbsp;{{(servicerequest.reporter.name) || 'NA'}}
                                 </span>
-                                <div class="item-title">
-                                    <a href="#" class="_500">{{servicerequest.service.name}} 
-                                    <br/><span title="Issue Number" class="font-size-12">
-                                    #{{servicerequest.code}}</span></a>
-                                </div>
-                                <small class="block text-xs text-muted text-ellipsis">
-                                    <span title="Reporter Name">
-                                    <i class="icon-user"></i>&nbsp;&nbsp;{{(servicerequest.reporter.name) || 'NA'}}
-                                    </span>
-                                    <span class="pull-right" title="Reporter Phone Number">
-                                    <i class="icon-phone"></i>&nbsp;&nbsp;{{(servicerequest.reporter.phone) ||'NA'}}
-                                    </span>
-                                </small>
-                            </div>
+                                <span class="pull-right" title="Reporter Phone Number">
+                                <i class="icon-phone"></i>&nbsp;&nbsp;{{(servicerequest.reporter.phone) ||'NA'}}
+                                </span>
+                            </small>
                         </div>
                     </div>
                 </div>
@@ -57,8 +55,10 @@
     <!-- end servicerequest listing -->
     <!-- TODO use infinite scroll insteady of pagination -->
     <div class="p-x-md p-y">
+        <div class="btn-group pull-right list-pager" uib-pager ng-show="willPaginate()" total-items="$parent.total" ng-model="$parent.page" items-per-page="$parent.limit" ng-change="find()" template-url="views/_partials/list_pager.html" style="padding-left: 12px;">
+        </div>
         <div class="btn-group pull-right">
-            <a title="Click To Refresh Issues" ng-click="load({ resolvedAt: null, operator: { $ne: null }, resetPage:true}, false)" class="btn btn-default btn-xs">
+            <a title="Click To Refresh Issues" ng-click="load({ resolvedAt: null, operator: { $ne: null }, resetPage:true, reset:true}, false)" class="btn btn-default btn-xs">
                 <i class="icon-reload"></i>
             </a>
             <a title="Click To Export Issues" class="btn btn-default btn-xs" ng-csv="export" csv-header="['Issue Number','Reported Date','Call Start Time', 'Call End Time','Call Duration(Minutes)', 'Call Duration(Seconds)', 'Reporter Name', 'Reporter Phone', 'Reporter Account', 'Operator', 'Area', 'Service Group', 'Service', 'Assignee', 'Description', 'Address', 'Status', 'Priority', 'Resolved Date', 'Time Taken(days)', 'Time Taken(hrs)', 'Time Taken(mins)', 'Time Taken(secs)']" filename="issues.csv">
