--- a/app/views/_partials/list_pager.html
+++ b/app/views/_partials/list_pager.html
@@ -1,15 +1,15 @@
 <span ng-class="{disabled: noPrevious()||ngDisabled, previous: align}">
-  <a href ng-click="selectPage(page - 1, $event)" ng-disabled="noPrevious()||ngDisabled" uib-tabindex-toggle class="btn btn-default btn-xs">
-    <i class="fa fa-fw fa-angle-left"></i>
+  <a href ng-click="selectPage(page - 1, $event)" ng-disabled="noPrevious()||ngDisabled" uib-tabindex-toggle class="btn btn-default btn-xs" title="Previous">
+    <i class="fa fa-fw fa-angle-left" title="Previous"></i>
 </a>
 </span>
 <span>
-	<a href ng-click="$parent.all()" class="btn btn-default btn-xs">
-		<i class="fa fa-fw fa-sort-amount-desc"></i>
+	<a href ng-click="$parent.all()" class="btn btn-default btn-xs" title="Load All">
+		<i class="fa fa-fw fa-sort-amount-desc text-muted" title="All"></i>
 	</a>
 </span>
 <span ng-class="{disabled: noNext()||ngDisabled, next: align}">
-  <a href ng-click="selectPage(page + 1, $event)" ng-disabled="noNext()||ngDisabled" uib-tabindex-toggle class="btn btn-default btn-xs">
-	<i class="fa fa-fw fa-angle-right"></i>
+  <a href ng-click="selectPage(page + 1, $event)" ng-disabled="noNext()||ngDisabled" uib-tabindex-toggle class="btn btn-default btn-xs" title="Next">
+	<i class="fa fa-fw fa-angle-right" title="Next"></i>
 </a>
 </span>
