--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -10,7 +10,7 @@
         <div class="row-body">
             <div class="row-inner">
                 <div class="padding">
-                    <form ng-submit="save()" name="servicerequestForm" role="form" autocomplete="off" novalidate>
+                    <form ng-submit="save()" name="servicerequestForm" role="form" autocomplete="off">
                         <div class="box">
                             <div class="box-header">
                                 <h6>Reporter Details</h6>
@@ -33,13 +33,13 @@
                                 <div class="row m-b">
                                     <div class="col-sm-6">
                                         <div class="form-group form-material floating">
-                                            <input ng-model="servicerequest.reporter.account" ng-required ng-minlength="2" type="text" name="account" class="form-control" />
+                                            <input ng-model="servicerequest.reporter.account" type="text" name="account" class="form-control" />
                                             <label class="floating-label">Account</label>
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="form-group form-material floating">
-                                            <input ng-model="servicerequest.reporter.email" ng-required ng-minlength="2" type="text" name="email" class="form-control" />
+                                            <input ng-model="servicerequest.reporter.email" type="email" name="email" class="form-control" />
                                             <label class="floating-label">Email</label>
                                         </div>
                                     </div>
@@ -52,30 +52,29 @@
                                 <div class="row m-b">
                                     <div class="col-sm-6">
                                         <div class="form-group form-material floating">
-                                            <oi-select oi-options="item.name for item in services track by item.id" ng-model="servicerequest.service" placeholder="Select Service" class="form-control"></oi-select>
+                                            <oi-select oi-options="item.name for item in services track by item.id" ng-model="servicerequest.service" ng-required placeholder="Select Service" class="form-control"></oi-select>
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="form-group form-material floating">
-                                            <oi-select oi-options="item.name for item in jurisdictions track by item.id" ng-model="servicerequest.jurisdiction" placeholder="Select Area" class="form-control"></oi-select>
-                                            <!--  <label class="floating-label">Area</label> -->
+                                            <oi-select oi-options="item.name for item in jurisdictions track by item.id" ng-model="servicerequest.jurisdiction" ng-required placeholder="Select Area" class="form-control"></oi-select>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group form-material floating">
-                                    <textarea ng-model="servicerequest.address" msd-elastic name="address" class="form-control" rows="2">
+                                    <textarea ng-model="servicerequest.address" ng-required msd-elastic name="address" class="form-control" rows="2">
                                     </textarea>
                                     <label class="floating-label">Address</label>
                                 </div>
                                 <div class="form-group form-material floating">
-                                    <textarea ng-model="servicerequest.description" msd-elastic name="description" class="form-control" rows="3">
+                                    <textarea ng-model="servicerequest.description" ng-required msd-elastic name="description" class="form-control" rows="3">
                                     </textarea>
                                     <label class="floating-label">Description</label>
                                 </div>
                             </div>
                             <div class="p-a text-right">
                                 <button ui-sref="app.servicerequests.list" type="button" ng-click="cancel()" class="btn">Cancel</button>
-                                <button ng-disabled="servicerequest.$invalid || !servicerequest.reporter.phone" type="submit" class="btn info">Submit</button>
+                                <button ng-disabled="servicerequestForm.$invalid || !servicerequest.reporter.phone || !servicerequest.reporter.name || !servicerequest.service || !servicerequest.jurisdiction || !servicerequest.address || !servicerequest.description" type="submit" class="btn info">Submit</button>
                             </div>
                         </div>
                     </form>
