force load all jurisdictions on party area

--- a/app/views/auth/signin.html
+++ b/app/views/auth/signin.html
@@ -17,11 +17,11 @@
                             <label class="floating-label">Password</label>
                         </div>
                         <div class="form-group clearfix">
-                            <a class="pull-right text-blue-600" ui-sref="forgot" title="Click to request reset password">
+                            <a class="pull-right text-blue-600" href title="Click to request reset password">
                                 Forgot Password?
                             </a>
                         </div>
-                        <button ng-disabled="signinForm.$invalid || !user.email || !user.password" type="submit" class="btn btn-primary btn-block btn-lg margin-top-40">Sign in</button>
+                        <button ng-disabled="signinForm.$invalid || !user.email || !user.password" type="submit" class="btn btn-primary btn-block btn-lg">Sign in</button>
                     </form>
                 </div>
             </div>
