enhance permissive ui directive and allow blocking & unblocking user(party) account

--- a/app/styles/theme-overrides.css
+++ b/app/styles/theme-overrides.css
@@ -110,6 +110,8 @@ body {
 
 
 
+
+
 /*support angular bootstrap*/
 
 .nav,
@@ -126,12 +128,16 @@ body {
 
 
 
+
+
 /*settings style*/
 
 .search-settings {
   padding: 0.9rem;
   font-family: Lato;
 }
+
+
 
 
 
@@ -174,6 +180,8 @@ body {
 
 
 
+
+
 /*status navigation*/
 
 .nav-active-white .nav-link {
@@ -188,12 +196,16 @@ body {
 
 
 
+
+
 /*list*/
 
 .list-item-padded {
   padding-top: 16px;
   padding-bottom: 16px;
 }
+
+
 
 
 
@@ -249,6 +261,8 @@ body {
 
 
 
+
+
 /*ng-prompt*/
 
 .modal-header {
@@ -276,6 +290,8 @@ body {
     max-width: 400px;
   }
 }
+
+
 
 
 
@@ -314,6 +330,8 @@ body {
 
 
 
+
+
 /*search-servicerequests*/
 
 .list-search .form-control-sm {
@@ -324,11 +342,15 @@ body {
 
 
 
+
+
 /*ensure all sv charts text use lato font*/
 
 svg text {
   font-family: Lato !important;
 }
+
+
 
 
 
@@ -346,4 +368,16 @@ svg text {
 .list-pager .disabled>span {
   color: #777;
   cursor: not-allowed;
+}
+
+
+
+/*box body*/
+
+.p-l-none {
+  padding-left: 0 !important;
+}
+
+.p-r-none {
+  padding-right: 0 !important;
 }
