--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -16,7 +16,7 @@
         <li class="nav-header hidden-folded">
           <span class="text-xs">Main</span>
         </li>
-        <li ui-sref-active="active">
+        <li ui-sref-active="active" show-if-has-any-permit="servicerequest:create,, servicerequest:view">
           <a ui-sref="app.servicerequests.list" title="Issues & Service Request">
               <span class="nav-icon">
                   <i class="ion-chatbubble-working"></i>
@@ -24,7 +24,7 @@
               <span class="nav-text">Issues</span>
           </a>
         </li>
-        <li ui-sref-active="active">
+        <li ui-sref-active="active" show-if-has-any-permit="servicerequest:create, servicerequest:edit">
           <a ui-sref="app.create_servicerequests" ui-sref-opts="{reload: true}" title="Report New Issue or Service Request">
               <span class="nav-icon">
                   <i class="ion-plus-circled"></i>
@@ -32,7 +32,7 @@
               <span class="nav-text">New Issue</span>
           </a>
         </li>
-        <li ui-sref-active="active">
+        <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
           <a ui-sref="app.overviews" title="Overviews">
               <span class="nav-icon">
                   <i class="ion-pie-graph"></i>
@@ -40,7 +40,7 @@
               <span class="nav-text">Overviews</span>
           </a>
         </li>
-        <li ui-sref-active="active">
+        <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
           <a ui-sref="app.standings" title="Standings">
               <span class="nav-icon">
                   <i class="ion-arrow-graph-up-right"></i>
@@ -48,7 +48,7 @@
               <span class="nav-text">Standings</span>
           </a>
         </li>
-        <li ui-sref-active="active">
+        <li show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view" ui-sref-active="active">
           <a ui-sref="app.manage.jurisdictions" title="Manage System">
               <span class="nav-icon">
                   <i class="ion-gear-a"></i>
@@ -72,9 +72,9 @@
         </div>
       </a>
       <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
-        <a class="dropdown-item" href="#" title="My Profile">
+        <!-- <a class="dropdown-item" href="#" title="My Profile">
                     <span>Profile</span>
-                </a>
+                </a> -->
         <!-- <a class="dropdown-item" ui-sref="app.manage.jurisdictions" title="System Settings">
                     <span>Settings</span>
                 </a> -->
