add permissive ui on management sidebar and allow for all filter clearing to reset issue list page & limits

--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -93,7 +93,7 @@
                 </div>
                 <!-- end services menu -->
                 <!-- start jurisdictions menu -->
-                <div class="p-a-md">
+                <div class="p-a-md" ng-if="jurisdictions.length > 1">
                     <div class="m-b text-muted text-xs">Areas</div>
                     <div class="nav-active-white">
                         <ul class="nav">
