--- a/app/views/dashboards/overviews.html
+++ b/app/views/dashboards/overviews.html
@@ -1,79 +1,91 @@
 <!-- start dashboard header -->
-<!-- <div class="app-header bg b-b">
-    <div class="navbar">
-        <div class="navbar-item pull-left h5">
-            Overview
-        </div>
+<div class="app-header bg b-b bg-white">
+  <div class="navbar">
+    <!-- start report title -->
+    <div class="navbar-item pull-left h5 text-md">
+      Overview - Reports
     </div>
-</div> -->
+    <!-- end report title -->
+    <!-- start report actions -->
+    <ul class="nav navbar-nav pull-right">
+      <!-- TODO implement downloads -->
+      <li class="nav-item">
+        <a class="nav-link" aria-expanded="false" title="Click to Filter Report">      
+            <i class="ion-android-funnel w-24" title="Click To Filter Reports"></i>
+        </a>
+      </li>
+    </ul>
+    <!-- end report actions -->
+  </div>
+</div>
 <!-- end dashboard header -->
 <!-- start overview body -->
 <div class="app-body">
-    <div class="app-body-inner">
-        <div class="row-col">
-            <div class="col-lg b-r">
-                <!-- start issues summary -->
-                <div class="row no-gutter">
-                    <div class="col-xs-6 col-sm-3 b-r b-b">
-                        <div class="padding">
-                            <div>
-                                <span class="pull-right">
+  <div class="app-body-inner">
+    <div class="row-col">
+      <div class="col-lg b-r">
+        <!-- start issues summary -->
+        <div class="row no-gutter">
+          <div class="col-xs-6 col-sm-3 b-r b-b">
+            <div class="padding">
+              <div>
+                <span class="pull-right">
                                 <i class="fa fa-caret-up text-primary m-y-xs"></i>
                             </span>
-                                <span class="text-muted l-h-1x">
+                <span class="text-muted l-h-1x">
                                 <i class="ion-ios-grid-view text-muted"></i>
                             </span>
-                            </div>
-                            <div class="text-center">
-                                <h2 class="text-center _600">{{issues.total}}</h2>
-                                <p class="text-muted m-b-md">Reported Issues</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 b-r b-b">
-                        <div class="padding">
-                            <div>
-                                <span class="pull-right">
+              </div>
+              <div class="text-center">
+                <h2 class="text-center _600">{{issues.total}}</h2>
+                <p class="text-muted m-b-md">Reported Issues</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 b-r b-b">
+            <div class="padding">
+              <div>
+                <span class="pull-right">
                             <i class="fa fa-caret-up text-primary m-y-xs"></i>
                             </span>
-                                <span class="text-muted l-h-1x">
+                <span class="text-muted l-h-1x">
                             <i class="ion-document text-muted"></i>
                             </span>
-                            </div>
-                            <div class="text-center">
-                                <h2 class="text-center _600">{{issues.resolved}}</h2>
-                                <p class="text-muted m-b-md">Resolved Issues</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 b-r b-b">
-                        <div class="padding">
-                            <div>
-                                <span class="pull-right">
+              </div>
+              <div class="text-center">
+                <h2 class="text-center _600">{{issues.resolved}}</h2>
+                <p class="text-muted m-b-md">Resolved Issues</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 b-r b-b">
+            <div class="padding">
+              <div>
+                <span class="pull-right">
                             <i class="fa fa-caret-down text-danger m-y-xs"></i>
                             </span>
-                                <span class="text-muted l-h-1x">
+                <span class="text-muted l-h-1x">
                             <i class="ion-android-document text-muted"></i>
                             </span>
-                            </div>
-                            <div class="text-center">
-                                <h2 class="text-center _600">{{issues.unresolved}}</h2>
-                                <p class="text-muted m-b-md">Un-Resolved Issues</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 b-b">
-                        <div class="padding">
-                            <div>
-                                <span class="pull-right">
+              </div>
+              <div class="text-center">
+                <h2 class="text-center _600">{{issues.unresolved}}</h2>
+                <p class="text-muted m-b-md">Un-Resolved Issues</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-6 col-sm-3 b-b">
+            <div class="padding">
+              <div>
+                <span class="pull-right">
                                 <i class="fa fa-caret-up text-primary m-y-xs"></i>
                             </span>
-                                <span class="text-muted l-h-1x">
+                <span class="text-muted l-h-1x">
                             <i class="icon-call-in text-muted"></i>
                             </span>
-                            </div>
-                            <div class="text-center">
-                                <h2 class="text-center _600">
+              </div>
+              <div class="text-center">
+                <h2 class="text-center _600">
                              <span title="Average Call Duration - Minutes Spent">
                              {{issues.averageCallDuration.minutes}}<span class="text-muted text-xs">minutes</span>
                              </span> 
@@ -81,103 +93,103 @@
                               {{issues.averageCallDuration.seconds}}<span class="text-muted text-xs">seconds</span>
                               </span>
                             </h2>
-                                <p class="text-muted m-b-md">Average Call Duration</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- end issues summary -->
-                <!-- start jurisdiction count summary -->
-                <div class="padding">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="box">
-                                <div class="box-header">
-                                    <h3>Issue per Area</h3>
-                                    <small class="block text-muted">
+                <p class="text-muted m-b-md">Average Call Duration</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end issues summary -->
+        <!-- start jurisdiction count summary -->
+        <div class="padding">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="box">
+                <div class="box-header">
+                  <h3>Issue per Area</h3>
+                  <small class="block text-muted">
                                  Count of Reported Issues by Their Area
                                 </small>
-                                </div>
-                                <div class="box-body">
-                                    <echart config="jurisdictionConfig" options="jurisdictionOptions"></echart>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-                <!-- end jurisdiction count summary -->
-                <!-- start service group count summary -->
-                <div class="padding">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="box">
-                                <div class="box-header">
-                                    <h3>Issue per Service Group</h3>
-                                    <small class="block text-muted">
+                <div class="box-body">
+                  <echart config="jurisdictionConfig" options="jurisdictionOptions"></echart>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end jurisdiction count summary -->
+        <!-- start service group count summary -->
+        <div class="padding">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="box">
+                <div class="box-header">
+                  <h3>Issue per Service Group</h3>
+                  <small class="block text-muted">
                                  Count of Reported Issues by Their Service Group
                                 </small>
-                                </div>
-                                <div class="box-body">
-                                    <pie-chart config="groupConfig" data="groupData" font-style="Lato"></pie-chart>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-                <!-- end service group count summary -->
-                <!-- start service count summary -->
-                <div class="padding">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="box">
-                                <div class="box-header">
-                                    <h3>Issue per Service</h3>
-                                    <small class="block text-muted">
+                <div class="box-body">
+                  <pie-chart config="groupConfig" data="groupData" font-style="Lato"></pie-chart>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end service group count summary -->
+        <!-- start service count summary -->
+        <div class="padding">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="box">
+                <div class="box-header">
+                  <h3>Issue per Service</h3>
+                  <small class="block text-muted">
                                 Count of Reported Issues by Their Service
                                 </small>
-                                </div>
-                                <div class="box-body">
-                                    <echart config="serviceConfig" options="serviceOptions"></echart>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-                <!-- end service count summary -->
-                <!-- start priority & status count summary -->
-                <div class="padding">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="box">
-                                <div class="box-header">
-                                    <h3>Issue per Status</h3>
-                                    <small class="block text-muted">
+                <div class="box-body">
+                  <echart config="serviceConfig" options="serviceOptions"></echart>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end service count summary -->
+        <!-- start priority & status count summary -->
+        <div class="padding">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="box">
+                <div class="box-header">
+                  <h3>Issue per Status</h3>
+                  <small class="block text-muted">
                                  Count of Reported Issues by Their Status
                                 </small>
-                                </div>
-                                <div class="box-body">
-                                    <pie-chart config="statusConfig" data="statusData"></pie-chart>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="box">
-                                <div class="box-header">
-                                    <h3>Issue per Priority</h3>
-                                    <small class="block text-muted">
+                </div>
+                <div class="box-body">
+                  <pie-chart config="statusConfig" data="statusData"></pie-chart>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="box">
+                <div class="box-header">
+                  <h3>Issue per Priority</h3>
+                  <small class="block text-muted">
                                 Count of Reported Issues by Their Priorities
                                 </small>
-                                </div>
-                                <div class="box-body">
-                                    <pie-chart config="priorityConfig" data="priorityData"></pie-chart>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-                <!-- end priority & status count summary -->
+                <div class="box-body">
+                  <pie-chart config="priorityConfig" data="priorityData"></pie-chart>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+        <!-- end priority & status count summary -->
+      </div>
     </div>
+  </div>
 </div>
 <!-- end overview body -->
