--- a/app/views/dashboards/standings.html
+++ b/app/views/dashboards/standings.html
@@ -1,5 +1,5 @@
 <!-- start dashboard header -->
-<div class="app-header bg b-b" style="background-color: white;">
+<div class="app-header bg b-b bg-white">
   <div class="navbar">
     <!-- start report title -->
     <div class="navbar-item pull-left h5 text-md">
@@ -7,7 +7,14 @@
     </div>
     <!-- end report title -->
     <!-- start report actions -->
-    <!-- TODO implement downloads -->
+    <ul class="nav navbar-nav pull-right">
+      <!-- TODO implement downloads -->
+      <li class="nav-item">
+        <a class="nav-link" aria-expanded="false" title="Click to Filter Report">      
+            <i class="ion-android-funnel w-24" title="Click To Filter Reports"></i>
+        </a>
+      </li>
+    </ul>
     <!-- end report actions -->
   </div>
 </div>
@@ -126,7 +133,6 @@
           </div>
           <div pickadate ng-model="startedAt" max-date="maxDate" on-change="onStartedAtChange(startedAt)" class="p-a"></div>
           <!-- end start date filter -->
-
           <!-- start end date filter -->
           <div class="p-a b-t b-b m-t-md">
             <h6 class="text-muted m-a-0">
