--- a/app/views/dashboards/overviews.html
+++ b/app/views/dashboards/overviews.html
@@ -10,7 +10,7 @@
     <ul class="nav navbar-nav pull-right">
       <!-- TODO implement downloads -->
       <li class="nav-item">
-        <a class="nav-link" aria-expanded="false" title="Click to Filter Report">      
+        <a ng-click="showFilter()" class="nav-link" aria-expanded="false" title="Click to Filter Report">      
             <i class="ion-android-funnel w-24" title="Click To Filter Reports"></i>
         </a>
       </li>
