add export support on standing reports

--- a/app/views/dashboards/_partials/overviews_filter.html
+++ b/app/views/dashboards/_partials/overviews_filter.html
@@ -122,7 +122,7 @@
   <!-- end filter body -->
   <!-- start filter footer -->
   <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="filter()">&nbsp;Load&nbsp;</button>
+    <button class="btn btn-primary" ng-click="filter()">Filter</button>
     <button class="btn btn-default" ng-click="filter(true)">Clear&nbsp;</button>
     <button class="btn btn-default" ng-click="$dismiss()">Cancel</button>
   </div>
