ensure chart responsiveness when window is resized

--- a/app/views/dashboards/overviews.html
+++ b/app/views/dashboards/overviews.html
@@ -37,7 +37,7 @@
       <!-- start service group count summary -->
       <div>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-sm-12">
             <div class="box">
               <div class="box-header">
                 <h3>Issue per Service Group</h3>
@@ -75,7 +75,7 @@
       <!-- start status count summary -->
       <div>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-sm-12">
             <div class="box">
               <div class="box-header">
                 <h3>Issue per Status</h3>
@@ -94,7 +94,7 @@
       <!-- start status count summary -->
       <div>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-sm-12">
             <div class="box">
               <div class="box-header">
                 <h3>Issue per Priority</h3>
